# yuzu

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  init-db.sql  pyproject.toml
.github/: copilot-instructions.md
docs/: methodology.md  project-zeno-fork-copilot-instructions.md  project-zeno-fork-quick-start.md  python-for-symfony-devs.md
docs/adr/: ADR-000-template.md  ADR-001-real-time-forest-change-detection.md  ADR-002-library-first-architecture-and-api.md
scripts/: insert_test_region.sql
src/yuzu/: __init__.py  config.py
src/yuzu/pipeline/: __init__.py
src/yuzu/pipeline/db/: __init__.py  connection.py
src/yuzu/pipeline/ingestion/: __init__.py  earth_engine.py  gfw_baseline.py  hansen_baseline.py
src/yuzu/pipeline/orchestration/: __init__.py  extract_forest_metrics.py  extract_hansen_baseline.py
src/yuzu/pipeline/processing/: __init__.py
src/yuzu/storytelling/: __init__.py
src/yuzu/visualization/: __init__.py
tests/: __init__.py  test_config.py  test_db_connection.py  test_earth_engine.py  test_hansen_baseline.py
